<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="@drawable/itenm_bg"
        tools:context=".ui.BottomSheetFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"
            android:visibility="gone"
            android:paddingTop="@dimen/_10sdp"
            android:textStyle="bold"
            android:paddingBottom="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_medium"
            />

        <LinearLayout
            android:id="@+id/lnRingtone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/whitel_line"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_phone_call_svgrepo_com" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/set_as_ringtone"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnNotification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/whitel_line"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_alarm_svgrepo_com" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/set_as_notification"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnAlarm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:background="@drawable/whitel_line">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_alarm_clock_clock_svgrepo_com" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/set_as_alarm"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnStorage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:background="@drawable/whitel_line">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_7sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_baseline_save_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnShare"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_7sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_baseline_share_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>


    </LinearLayout>
</layout>